# zorio

./: Cargo.toml  README.md
src/: cursor.rs  impls.rs  io.rs  lib.rs
